# Aria

./: .gitignore  README.md  install.sh  pyproject.toml  start.bat  start.sh
.github/workflows/: release.yml
Bulk Generation/: README.md  generator.py
MIDI Data Generated/: Aria Review.xlsx
MIDI Data Generated/Reaper Files/Backups/: aria-2026-02-14_151614.rpp-bak  aria-2026-02-14_153503.rpp-bak  aria-2026-02-14_153505.rpp-bak  badpiggies-2026-02-16_134216.rpp-bak  folk-2026-02-16_141010.rpp-bak  folk-2026-02-16_155152.rpp-bak
MIDI Data Generated/Reaper Files/Media/: t0p6_tp0p9_mp0.mid  t0p8_tp0p9_mp0.mid  t0p8_tp0p9_mp0p06.mid  t1_tp0p98_mp0.mid  t1_tp0p98_mp0p06.mid  t1_tp0p9_mp0.mid  t1p2_tp0p95_mp0p06.mid  t1p2_tp0p9_mp0-imported.mid  t1p2_tp0p9_mp0p06-imported.mid
MIDI Data Generated/Recorded Data/: 12barblues.mid  Bach Prelude.mid  C Major Chord Progression.mid  E major fast.mid  F Minor Blues.mid  ahyazen.mid  folk.mid  libeirut.mid  spain.mid  zelda.mid
MIDI Data Generated/grid_outputs/12barblues/: t0p6_tp0p95_mp0.mid  t0p6_tp0p98_mp0p02.mid  t0p6_tp0p98_mp0p04.mid  t0p6_tp0p9_mp0.mid  t0p8_tp0p95_mp0.mid  t0p8_tp0p95_mp0p02.mid  t0p8_tp0p95_mp0p04.mid  t0p8_tp0p95_mp0p06.mid  (+22 more)
aria/: config.py
aria midi/: Aria Review No Hidden + Graphs.xlsx
aria midi/Reaper Files/: aria.rpp  badpiggies.rpp  folk.rpp
aria midi/Recorded Data/: AOT.mid  AOTarpegio.mid  andalous.mid  badpiggies.mid  justacloserwalkwiththee.mid  kirie.mid
front-end/: package.json
real-time/: ARCHITECTURE.md  Live Max knobs.amxd  QUICKSTART.md  README.md  __init__.py  ableton_bridge.py  aria_engine.py  bridge_engine.py  calibrate.py  manual_mode.py  osc-sanity.py  prompt_midi.py  requirements.txt  sampling_hotkeys.py  sampling_state.py
real-time/ableton/: Aria Ableton.als  Aria Bridge.amxd  aria.als
real-time/core/: __init__.py  bridge_engine.py  datastore.py  prompt_midi.py  sampling_state.py
real-time/modes/: __init__.py  clock_mode.py  manual_mode.py  osc_controller.py  sampling_hotkeys.py
real-time/tests/: test_clock_grid.py  test_measures.py
real-time/ui/: __init__.py  ui_panel.py
sweeps/: generate_grid.py
(+687 files in other folders)
