[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aria"
version = "0.0.1"
description = ""
authors = [{name = "Louis Bradshaw", email = "loua19@outlook.com"}]
requires-python = ">=3.11"

dependencies = [
    "ariautils @ git+https://github.com/EleutherAI/aria-utils.git",
    "torch @ file:///C:/Code/Github%20Serious/Aria/wheels/torch-2.5.1+cu121-cp311-cp311-win_amd64.whl; platform_system == \"Windows\"",
    "torch>=2.3; platform_system != \"Windows\"",
    "mlx; platform_system == \"Darwin\" and platform_machine == \"arm64\"",
    "safetensors>=0.4.0",
    "jsonlines",
    "tqdm",
]

[project.optional-dependencies]
dev = ["black"]
train = ["accelerate"]
real-time = ["mido>=1.3.0", "python-rtmidi>=1.4.9"]
eval = [
    "transformers",
    "torchaudio @ file:///C:/Code/Github%20Serious/Aria/wheels/torchaudio-2.5.1+cu121-cp311-cp311-win_amd64.whl; platform_system == \"Windows\"",
    "torchvision @ file:///C:/Code/Github%20Serious/Aria/wheels/torchvision-0.20.1+cu121-cp311-cp311-win_amd64.whl; platform_system == \"Windows\"",
    "torchaudio; platform_system != \"Windows\"",
    "torchvision; platform_system != \"Windows\"",
    "mido>=1.3.0",
]
demo = ["python-rtmidi"]
all = [
    "black",
    "accelerate",
    "transformers",
    "torchaudio @ file:///C:/Code/Github%20Serious/Aria/wheels/torchaudio-2.5.1+cu121-cp311-cp311-win_amd64.whl; platform_system == \"Windows\"",
    "torchvision @ file:///C:/Code/Github%20Serious/Aria/wheels/torchvision-0.20.1+cu121-cp311-cp311-win_amd64.whl; platform_system == \"Windows\"",
    "torchaudio; platform_system != \"Windows\"",
    "torchvision; platform_system != \"Windows\"",
    "mido>=1.3.0",
    "python-rtmidi>=1.4.9",
]

[tool.black]
line-length = 80
target-version = ["py311"]
include = '\.pyi?$'

[project.scripts]
aria = "aria.run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aria", "aria.*"]

[tool.setuptools.package-data]
aria = ["../config/*.json", "../config/models/*.json"]
